[gd_scene load_steps=10 format=3 uid="uid://cj0a6y04one60"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_n0sj3"]
[ext_resource type="Script" path="res://scripts/grid_visualizer.gd" id="2_3x2fm"]
[ext_resource type="Script" path="res://scenes/shape_previews/preview_box.gd" id="3_02mcv"]
[ext_resource type="Script" path="res://scenes/FPSLabel.gd" id="4_d2a0j"]

[sub_resource type="Curve" id="Curve_wmors"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.501484, 0.992415), -0.0639, -0.0639, 0, 0, Vector2(0.804154, 0.302217), -4.47302, -4.47302, 0, 0, Vector2(1, 0), -0.0481513, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_bahle"]
curve = SubResource("Curve_wmors")

[sub_resource type="Curve" id="Curve_ap5s6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.507001), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ypxuu"]
curve = SubResource("Curve_ap5s6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_c57vl"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 3.0
initial_velocity_min = 500.0
initial_velocity_max = 600.0
angular_velocity_min = -200.0
angular_velocity_max = 200.0
gravity = Vector3(0, 1500, 0)
scale_min = 35.0
scale_max = 35.0
scale_curve = SubResource("CurveTexture_ypxuu")
alpha_curve = SubResource("CurveTexture_bahle")

[node name="Node2D" type="Node2D"]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("grid_visualuzer", "particles")]
script = ExtResource("1_n0sj3")
grid_visualuzer = NodePath("../GridVisualizer")
side_move_speed = 10
particles = NodePath("../Node2D")

[node name="GridVisualizer" type="Node2D" parent="."]
script = ExtResource("2_3x2fm")

[node name="PreviewBox" type="Node2D" parent="."]
position = Vector2(500, 100)
script = ExtResource("3_02mcv")

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = 494.0
offset_top = 813.0
offset_right = 534.0
offset_bottom = 836.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPSLabel" type="Label" parent="."]
offset_left = 394.0
offset_right = 638.0
offset_bottom = 23.0
text = "FPS: "
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_d2a0j")

[node name="Node2D" type="Node2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="Node2D"]
position = Vector2(19.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Node2D"]
position = Vector2(58.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D3" type="GPUParticles2D" parent="Node2D"]
position = Vector2(97.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D4" type="GPUParticles2D" parent="Node2D"]
position = Vector2(136.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D5" type="GPUParticles2D" parent="Node2D"]
position = Vector2(175.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D6" type="GPUParticles2D" parent="Node2D"]
position = Vector2(214.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D7" type="GPUParticles2D" parent="Node2D"]
position = Vector2(253.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D8" type="GPUParticles2D" parent="Node2D"]
position = Vector2(292.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D9" type="GPUParticles2D" parent="Node2D"]
position = Vector2(331.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[node name="GPUParticles2D10" type="GPUParticles2D" parent="Node2D"]
position = Vector2(370.5, 0)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_c57vl")
lifetime = 0.7
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.1

[connection signal="game_lost" from="GameManager" to="GridVisualizer" method="hide"]
[connection signal="game_lost" from="GameManager" to="PreviewBox" method="hide"]
[connection signal="game_lost" from="GameManager" to="ScoreLabel" method="hide"]
[connection signal="game_started" from="GameManager" to="PreviewBox" method="show"]
[connection signal="game_started" from="GameManager" to="ScoreLabel" method="show"]
[connection signal="new_shape_placed" from="GameManager" to="PreviewBox" method="show_preview"]
[connection signal="score_changed" from="GameManager" to="ScoreLabel" method="set_text"]
